--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/file": "^4.5.3",
+    "@ionic-native/google-plus": "^4.6.0",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
@@ -30,6 +31,7 @@
     "cordova-browser": "5.0.3",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-googleplus": "^5.2.3",
     "cordova-plugin-ionic": "^4.0.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.16",
@@ -66,7 +68,10 @@
         "MAX_STORE": "2"
       },
       "cordova-plugin-file": {},
-      "cordova-plugin-statusbar": {}
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-googleplus": {
+        "REVERSED_CLIENT_ID": "48365895185-ee3unrb93s0hs4mnbkmhe5u7n4fg1gjv"
+      }
     },
     "platforms": [
       "android",
