--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
       "cordova-plugin-file": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-googleplus": {
-        "REVERSED_CLIENT_ID": "48365895185-k9pklf1pgdc5cl1v6j2k2ofluhfvvo7k"
+        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.48365895185-k9pklf1pgdc5cl1v6j2k2ofluhfvvo7k"
       }
     },
     "platforms": [
