--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
     "moment": "^2.22.0",
+    "npm": "^5.8.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
